# columnar_networks

./: BinaryMnistTBTT.py  CMakeLists.txt  NoisyPatterns.py  NoisyPatternsTBTT.py  NoisyPatterns_NoTD.py  meta_learning_gradient_alignment.py  parameter_calculation.py  rnn_gradient_aligntment.py  tbbt_meta_learning.py  test.py  traceconditioning_sanity.py
configs/: mnist.py
configs/classification/: cnn.py  copy_task.py  gradient_alignment.py  plot.py  reg_parser.py  sine.py  td.py
configs/plots/: plot.py  sql.py
dataset/: sine.py
environment/: copy_task.py  mnist_hallway.py
include/environments/mnist/: binary_mnist_loader.hpp
model/: colnn_final.py  lstm.py  scalable_columnar.py
pybind_interface/: interface.cpp
trainer/: learner.py  sarsa.py
utils/: utils.py
